<resources>
    <string name="app_name">eTathaker</string>
    <string name="login_main_txt">Login</string>
    <string name="login_sub_txt">Enter Your Password</string>
    <string name="login_edittext_hint">Password...</string>
    <string name="login_check_box">Remember Me</string>
    <string name="login_button">Login</string>
    <string name="connection_error">Your Device Is Not Connected To The Internet</string>
    <string name="login_incorrect_pass">The Password Is Incorrect !</string>
    <string name="alert_verify_key">Verify the key...</string>
    <string name="alert_loading_tickets">Loading Tickets...</string>
    <string name="title_activity_landing_page">Tickets</string>
    <string name="landing_page_tab_sold">Sold Tickets</string>
    <string name="landing_page_tab_checkedin">Checked-In Tickets</string>
    <string name="landing_page_FragSold_sold">Sold</string>
    <string name="landing_page_FragCheck_checkin">Checked-In</string>
    <string name="sliding_menu_main">Main</string>
    <string name="sliding_menu_listview">Attendees List</string>
    <string name="sliding_menu_logout">Logout</string>
    <string name="alert_ticket_qrCorrect">Ticket Accepted</string>
    <string name="alert_ticket_qrFailed">Ticket Refused</string>
    <string name="Toast_permission">This Application Needs A Permission To Use Camera</string>
    <string name="alert_attendee_info">Loading Attendee Information</string>
    <string name="attendee_listview_id_layout">ID</string>
    <string name="ticket_type">Ticket Type</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="email">Email</string>
    <string name="last_check_ins">Last Check-INs</string>
    <string name="check_in_last">Check</string>
    <string name="ticket_info_activity_title">Ticket Information</string>
    <string name="developed_by">Developed by</string>

    <string-array name="ticketinfo">
        <item>@string/ticket_type</item>
        <item>@string/buyer_name</item>
        <item>@string/email</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
